# qa_guru_python_10_18_hw

./: .gitignore  README.md  pyproject.toml
